[project]
name = "fast-meerkat"
version = "3.0.0"
description = "An Opinionated Clean Architecture App Template"
authors = [
    { name = "Omar", email = "omar@atumm.org" },
]
requires-python = ">=3.11.1,<4.0.0"
dependencies = [
    "uvicorn>=0.21.1",
    "gunicorn>=20.1.0",
    "fastapi-event<1.0.0,>=0.1.3",
    "ujson<6.0.0,>=5.4.0",
    "click<9.0.0,>=8.1.3",
    "greenlet==1.1.3",
    "beanie>=1.18.0",
    "motor>=3.1.2",
    "asyncio>=3.4.3",
    "pymongo>=4.3.3",
    "uvloop>=0.17.0",
    "starlette>=0.26.1",
    "classy-fastapi>=0.4.0",
    "fastapi>=0.95.1",
    "pydantic[dotenv,email]>=1.10.11",
    "asgiref>=3.6.0",
    "injector>=0.20.1",
    "py-bcrypt>=0.4",
    "fastapi-jwt-auth>=0.5.0",
    "buti @ git+https://github.com/atumm-org/buti.git@dev",
    "python-dotenv>=1.0.0",
    "atumm-core @ git+https://github.com/atumm-ra/atumm-core.git@dev",
    "atumm-services-health @ git+https://github.com/atumm-ra/atumm-services-health.git@dev",
    "atumm-services-user @ git+https://github.com/atumm-ra/atumm-services-user.git@dev",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
mock_use_standalone_module = true

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "httpx>=0.24.0",
    "anyio[asyncio]>=3.6.2",
    "pytest>=7.3.1",
    "pytest-anyio>=0.0.0",
    "pytest-mock>=3.10.0",
    "mock>=5.0.2",
    "mypy>=1.3.0",
    "ssort>=0.11.6",
    "isort>=5.12.0",
    "black>=23.3.0",
    "six>=1.16.0",
    "pytest-cov>=4.1.0",
    "faker>=19.2.0",
    "python-dateutil>=2.8.2",
    "typer>=0.9.0",
]

[tool.pdm.build]
includes = []
