[project]
name = "fast-meerkat"
version = "3.0.0"
description = "An Opinionated Clean Architecture App Template"
authors = [
    { name = "Omar", email = "omar@atumm.org" },
]
requires-python = ">=3.11.1,<4.0.0"
dependencies = [
    "uvicorn>=0.21.1",
    "gunicorn>=20.1.0",
    "fastapi-event<1.0.0,>=0.1.3",
    "ujson<6.0.0,>=5.4.0",
    "click<9.0.0,>=8.1.3",
    "greenlet==1.1.3",
    "beanie>=1.21.0",
    "motor>=3.1.2",
    "asyncio>=3.4.3",
    "pymongo>=4.3.3",
    "uvloop>=0.17.0",
    "starlette>=0.26.1",
    "fastapi>=0.103.1",
    "pydantic>=2.3.0",
    "asgiref>=3.6.0",
    "injector>=0.20.1",
    "py-bcrypt>=0.4",
    "buti @ git+https://github.com/atumm-org/buti.git@master",
    "python-dotenv>=1.0.0",
    "atumm-core @ file:///${PROJECT_ROOT}/atumm-ext/atumm-core",
    "atumm-extensions @ file:///${PROJECT_ROOT}/atumm-ext/atumm-extensions",
    "atumm-service-health @ file:///${PROJECT_ROOT}/atumm-ext/atumm-services-health",
    "atumm-service-user @ file:///${PROJECT_ROOT}/atumm-ext/atumm-services-user",
    "atumm-tool @ file:///${PROJECT_ROOT}/atumm-ext/atumm-tool",
    "pydantic-settings>=2.0.3",
    "email-validator>=2.0.0.post2",
    "fastapi-restful @ git+https://github.com/omars44/FastApi-RESTful.git@exclude-router-constructor",
    "pyseto>=1.7.4",
    "sqlalchemy>=2.0.21",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
mock_use_standalone_module = true

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "httpx>=0.24.0",
    "anyio[asyncio]>=3.6.2",
    "pytest>=7.3.1",
    "pytest-anyio>=0.0.0",
    "pytest-mock>=3.10.0",
    "mock>=5.0.2",
    "mypy>=1.3.0",
    "ssort>=0.11.6",
    "isort>=5.12.0",
    "black>=23.3.0",
    "six>=1.16.0",
    "pytest-cov>=4.1.0",
    "faker>=19.2.0",
    "python-dateutil>=2.8.2",
    "typer>=0.9.0",
    "bump-pydantic>=0.7.0",
    "autoflake>=2.2.1",
]

[tool.pdm.build]
includes = []
